--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -15,13 +15,15 @@
         android:orientation="vertical">
 
         <ImageView
-            android:src="@drawable/logo"
             android:id="@+id/logo"
+            android:layout_width="385dp"
+            android:layout_height="204dp"
             android:layout_marginStart="13dp"
             android:layout_marginTop="8dp"
-            android:cropToPadding="true" android:allowClickWhenDisabled="false" android:adjustViewBounds="false"
-            android:layout_width="385dp"
-            android:layout_height="204dp"/>
+            android:adjustViewBounds="false"
+            android:allowClickWhenDisabled="false"
+            android:cropToPadding="true"
+            android:src="@drawable/logo" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputLayout"
@@ -29,8 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:hint="@string/autocomplete_address1_label">
 
             <com.andorid.fudbox.model.place.AutocompleteEditText
@@ -46,9 +48,9 @@
         <Button
             android:id="@+id/geolocalize_button"
             style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="@string/geolocalization" />
 
         <Button
@@ -58,16 +60,24 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
             android:layout_marginTop="16dp"
-            android:text="@string/autocomplete_save_button"
-            android:backgroundTint="@color/black"/>
+            android:backgroundTint="@color/black"
+            android:text="@string/autocomplete_save_button" />
 
         <!-- The map for visual confirmation of the selected address -->
         <!-- Stub to only load the map after Autocomplete prediction selection -->
+        <ProgressBar
+            android:id="@+id/loading"
+            style="?android:attr/progressBarPadding"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:visibility="invisible" />
+
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="12dp"
             android:visibility="gone"
             app:cardCornerRadius="12dp"
             app:cardElevation="8dp">
@@ -76,6 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="16dp">
+
 
                 <ViewStub
                     android:id="@+id/stub_map"
