Added a second languages to string values

--- a/app/src/main/res/values/menu.xml
+++ b/app/src/main/res/values/menu.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="add_to_cart">Add to Cart</string>
     <string name="price">Price: </string>
-    <string name="menu">Menu</string>
+    <string name="menu" translatable="false">Menu</string>
 </resources>
