minor changes in place activity

--- a/app/src/main/res/values/place.xml
+++ b/app/src/main/res/values/place.xml
@@ -62,5 +62,6 @@
     <string name="autocomplete_reset_button" translatable="false">reset address</string>
 
     <string name="set_address">Address successfully set</string>
+    <string name="no_address">Insert an address before</string>
 
 </resources>
