--- a/app/src/main/res/layout/fragment_order_address.xml
+++ b/app/src/main/res/layout/fragment_order_address.xml
@@ -154,7 +154,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/autocomplete_save_button"
+            android:id="@+id/button_set_address"
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
