--- a/app/src/main/res/layout/item_recent_order.xml
+++ b/app/src/main/res/layout/item_recent_order.xml
@@ -71,6 +71,14 @@
                 android:textColor="@color/grey"
                 android:layout_marginTop="4dp"/>
 
+            <TextView
+                android:id="@+id/delivery_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+                android:textColor="@color/grey"
+                android:layout_marginTop="4dp"/>
+
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
