--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -10,30 +10,27 @@
         android:id="@+id/fragment_logout_button"
         android:layout_width="203dp"
         android:layout_height="57dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginEnd="104dp"
         android:layout_marginBottom="96dp"
         android:text="@string/logout"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:layout_editor_absoluteX="104dp" />
 
     <TextView
         android:id="@+id/fragment_loggedin_user"
         android:layout_width="233dp"
         android:layout_height="30dp"
         android:layout_marginStart="92dp"
-        android:layout_marginEnd="92dp"
         android:layout_marginBottom="312dp"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#FFA726"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/fragment_logout_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="0.807"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.428" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -51,23 +48,22 @@
     <Button
         android:id="@+id/recent_orders_button"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:drawableEnd="@drawable/right"
         android:text="@string/recent_order"
-        android:textAllCaps="false"
         android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/fragment_logout_button"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintHeight_default="wrap"
         app:layout_constraintHeight_min="0dp"
         app:layout_constraintHeight_percent="0.0"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/fragment_loggedin_user"
-        app:layout_constraintVertical_bias="0.113"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_bias="0.101" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
